--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <html>
-    <head>
-        <link href="style.css" rel="stylesheet">
-        <meta charset="utf-8">
-    </head>
 
-    <body>
-        <canvas id="c"></canvas>
-        <span>.</span>
-        <script src="utils.js"></script>
-        <script src="index.js"></script>
-        <script src="Koong.js"></script>
-    </body>
+<head>
+    <link href="style.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@800&display=swap" rel="stylesheet">    <meta charset="utf-8">
+</head>
+
+<body>
+    <canvas id="c"></canvas>
+    <span>.</span>
+    <script src="utils.js"></script>
+    <script src="index.js"></script>
+    <script src="Koong.js"></script>
+</body>
+
 </html>
