--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <span>.</span>
     <script src="utils.js"></script>
     <script src="index.js"></script>
-    <script src="Koong.js"></script>
+    <script src="Hangul.js"></script>
 </body>
 
 </html>
