--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <canvas id="c"></canvas>
     <span>.</span>
     <script src="utils.js"></script>
-    <script src="index.js"></script>
     <script src="Hangul.js"></script>
+    <script src="kkk.js"></script>
 </body>
 
 </html>
