--- a/index.html
+++ b/index.html
@@ -3,15 +3,26 @@
 <head>
     <link href="style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@800&display=swap" rel="stylesheet">    <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@800&display=swap" rel="stylesheet">
+    <meta charset="utf-8">
 </head>
 
 <body>
+    <div class="canvas-select-menu">
+        <button>쿵</button>
+        <button>ㅋ</button>
+        <button>반짝</button>
+    </div>
     <canvas id="c"></canvas>
     <span>.</span>
+    
     <script src="utils.js"></script>
-    <script src="Hangul.js"></script>
-    <script src="kkk.js"></script>
+    <script src="hangul/Hangul.js"></script>
+    <script src="canvas/banjjag.js"></script>
+    <script src="hangul/banjjag.js"></script>
+    <!-- <script src="canvas/kkk.js"></script> -->
+    <!-- <script src="hangul/kkk.js"></script> -->
+    <script src="index.js"></script>
 </body>
 
 </html>
