와르르 추가

--- a/banjjag/index.html
+++ b/banjjag/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <link href="style.css" rel="stylesheet">
+    <link href="../style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@800&display=swap" rel="stylesheet">
     <meta charset="utf-8">
