--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <script src="utils.js"></script>
     <script src="hangul/Hangul.js"></script>
     <script src="canvas/HangulCanvas.js"></script>
-    <script src="canvas/koong.js"></script>
+    <script src="canvas/tong.js"></script>
     <script src="canvas/kkk.js"></script>
     <script src="canvas/banjjag.js"></script>
-    <script src="hangul/koong.js"></script>
+    <script src="hangul/tong.js"></script>
     <script src="hangul/kkk.js"></script>
     <script src="hangul/banjjag.js"></script>
     <!-- <script src="canvas/kkk.js"></script> -->
