--- a/tong/index.html
+++ b/tong/index.html
@@ -15,8 +15,8 @@
     <script src="../utils.js"></script>
     <script src="../hangul/Hangul.js"></script>
     <script src="../canvas/HangulCanvas.js"></script>
-    <script src="../canvas/warr.js"></script>
-    <script src="../hangul/warr.js"></script>
+    <script src="../canvas/tong.js"></script>
+    <script src="../hangul/tong.js"></script>
     <script src="index.js"></script>
 </body>
 
