--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <script src="hangul/Hangul.js"></script>
     <script src="canvas/HangulCanvas.js"></script>
     <script src="canvas/tong.js"></script>
-    <script src="canvas/kkk.js"></script>
+    <script src="canvas/kick.js"></script>
     <script src="canvas/banjjag.js"></script>
     <script src="hangul/tong.js"></script>
-    <script src="hangul/kkk.js"></script>
+    <script src="hangul/kick.js"></script>
     <script src="hangul/banjjag.js"></script>
-    <!-- <script src="canvas/kkk.js"></script> -->
-    <!-- <script src="hangul/kkk.js"></script> -->
+    <!-- <script src="canvas/kick.js"></script> -->
+    <!-- <script src="hangul/kick.js"></script> -->
     <script src="index.js"></script>
 </body>
 
