--- a/kick/index.html
+++ b/kick/index.html
@@ -15,8 +15,8 @@
     <script src="../utils.js"></script>
     <script src="../hangul/Hangul.js"></script>
     <script src="../canvas/HangulCanvas.js"></script>
-    <script src="../canvas/kkk.js"></script>
-    <script src="../hangul/kkk.js"></script>
+    <script src="../canvas/kick.js"></script>
+    <script src="../hangul/kick.js"></script>
     <script src="index.js"></script>
 </body>
 
